--- a/JEE6/org.jeegen.jee6.ui/pom.xml
+++ b/JEE6/org.jeegen.jee6.ui/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<name>JEE6 DSL UI</name>
-	<version>1.1.13</version>
+	<version>1.1.14-SNAPSHOT</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee6.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
