* Repository ID angepasst.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@734 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/org.jeegen.releng/pom.xml
+++ b/Updatesite/org.jeegen.releng/pom.xml
@@ -241,7 +241,7 @@
 			</activation>
 			<repositories>
 				<repository>
-					<id>jee7-target</id>
+					<id>jee-generator</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/mars</url>
 				</repository>
@@ -302,7 +302,7 @@
 
 			<repositories>
 				<repository>
-					<id>jee6-target</id>
+					<id>jee-generator</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/luna</url>
 				</repository>
@@ -363,7 +363,7 @@
 			</activation>
 			<repositories>
 				<repository>
-					<id>jee7-target</id>
+					<id>jee-generator</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/kepler</url>
 				</repository>
