--- a/Updatesite/org.jeegen.luna.product/pom.xml
+++ b/Updatesite/org.jeegen.luna.product/pom.xml
@@ -15,14 +15,17 @@
 	<artifactId>jee.product.luna</artifactId>
 
 	<properties>
-		<download.server>ftp.halifax.rwth-aachen.de</download.server>
-		<download.eclipse.url>http://${download.server}/eclipse/technology/epp/downloads/release/luna/SR2/</download.eclipse.url>
-		<download.director.path>eclipse/tools/buckminster/products</download.director.path>
+		<appname>jee-generator</appname>
 
 		<eclipse.download>download</eclipse.download>
 		<eclipse.package>jee</eclipse.package>
-		<eclipse.version>luna-SR2</eclipse.version>
-		<appname>jee-generator</appname>
+		<eclipse.distro>luna</eclipse.distro>
+		<eclipse.release>SR2</eclipse.release>
+		<eclipse.version>${eclipse.distro}-${eclipse.release}</eclipse.version>
+
+		<download.server>ftp.halifax.rwth-aachen.de</download.server>
+		<download.eclipse.url>http://${download.server}/eclipse/technology/epp/downloads/release/${eclipse.distro}/${eclipse.release}/</download.eclipse.url>
+		<download.director.path>eclipse/tools/buckminster/products</download.director.path>
 
 		<eclipse.linux64>${download.eclipse.url}${eclipse.linux64.filename}.tar.gz</eclipse.linux64>
 		<eclipse.linux64.filename>eclipse-${eclipse.package}-${eclipse.version}-linux-gtk-x86_64</eclipse.linux64.filename>
@@ -84,6 +87,7 @@
 								<get src="${eclipse.linux64}"
 									dest="${eclipse.download}/${eclipse.version}/linux/x86_64/eclipse-${eclipse.package}-${eclipse.version}-linux-gtk-x86_64.tar.gz"
 									skipexisting="true" />
+<!--
 								<get src="${eclipse.linux32}"
 									dest="${eclipse.download}/${eclipse.version}/linux/x86/eclipse-${eclipse.package}-${eclipse.version}-linux-gtk.tar.gz"
 									skipexisting="true" />
@@ -99,6 +103,7 @@
 								<get src="${eclipse.windows32}"
 									dest="${eclipse.download}/${eclipse.version}/win32/x86/eclipse-${eclipse.package}-${eclipse.version}-win32.zip"
 									skipexisting="true" />
+-->
 
 
 
@@ -111,9 +116,9 @@
 										appname="${appname}"
 										version="${project.version}">
 
-									<updatesite url="http://download.eclipse.org/releases/luna/" />
+									<updatesite url="http://download.eclipse.org/releases/${eclipse.distro}/" />
 									<updatesite url="http://download.itemis.com/updates/releases/" />
-									<updatesite url="http://www.jee-generator.org/updates/luna/" />
+									<updatesite url="http://www.jee-generator.org/updates/release/" />
 
 									<!-- Eclipse staff -->
 									<installunit name="org.eclipse.egit.feature.group" />
@@ -127,6 +132,7 @@
 								<!-- Renaming files -->
 								<move file="${project.build.directory}/dist/${eclipse.linux64.filename}-${appname}-${project.version}.tar.gz"
 										tofile="${project.build.directory}/dist/eclipse-${appname}-${eclipse.version}-linux-gtk-x86_64.tar.gz" />
+<!--
 								<move file="${project.build.directory}/dist/${eclipse.linux32.filename}-${appname}-${project.version}.tar.gz"
 										tofile="${project.build.directory}/dist/eclipse-${appname}-${eclipse.version}-linux-gtk.tar.gz" />
 								<move file="${project.build.directory}/dist/${eclipse.osx64.filename}-${appname}-${project.version}.tar.gz"
@@ -137,6 +143,7 @@
 										tofile="${project.build.directory}/dist/eclipse-${appname}-${eclipse.version}-win32-x86_64.zip" />
 								<move file="${project.build.directory}/dist/${eclipse.windows32.filename}-${appname}-${project.version}.zip"
 										tofile="${project.build.directory}/dist/eclipse-${appname}-${eclipse.version}-win32.zip" />
+-->
 							</target>
 						</configuration>
 					</execution>
