* Snapshot Update Sites ergänzt.  * Reduzierung auf eine Update Site für alles.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@741 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/org.jeegen.mars.product/pom.xml
+++ b/Updatesite/org.jeegen.mars.product/pom.xml
@@ -20,7 +20,7 @@
 		<eclipse.download>download</eclipse.download>
 		<eclipse.package>jee</eclipse.package>
 		<eclipse.distro>mars</eclipse.distro>
-		<eclipse.release>RC1</eclipse.release>
+		<eclipse.release>M7</eclipse.release>
 		<eclipse.version>${eclipse.distro}-${eclipse.release}</eclipse.version>
 
 		<download.server>ftp.halifax.rwth-aachen.de</download.server>
