* Version Bump und Snapshot.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@757 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/org.jeegen.jee7.ui/pom.xml
+++ b/JEE7/org.jeegen.jee7.ui/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<name>JEE7 DSL UI</name>
-	<version>1.0.6</version>
+	<version>1.0.7-SNAPSHOT</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee7.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
