--- a/JEE6/org.jeegen.jee6/plugin.xml
+++ b/JEE6/org.jeegen.jee6/plugin.xml
@@ -3,7 +3,7 @@
 
 <plugin>
 	<extension point="org.eclipse.emf.ecore.generated_package">
-		<package uri = "http://www.itemis.de/jee6/Dsl" 
+		<package uri = "http://www.jee-generator.org/jee6/Dsl" 
 			class = "org.jeegen.jee6.jee6.Jee6Package"
 			genModel = "de/itemis/jee6/Dsl.genmodel" /> 
 	</extension>
