--- a/JEE7/org.jeegen.jee7/plugin.xml
+++ b/JEE7/org.jeegen.jee7/plugin.xml
@@ -3,7 +3,7 @@
 
 <plugin>
 	<extension point="org.eclipse.emf.ecore.generated_package">
-		<package uri = "http://www.itemis.de/jee7/Dsl" 
+		<package uri = "http://www.jee-generator.org/jee7/Dsl" 
 			class = "org.jeegen.jee7.jee7.Jee7Package"
 			genModel = "de/itemis/jee7/Dsl.genmodel" /> 
 	</extension>
