--- a/JEE6/org.jeegen.jee6/pom.xml
+++ b/JEE6/org.jeegen.jee6/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<name>JEE6 DSL</name>
-	<version>1.1.15-SNAPSHOT</version>
+	<version>1.2.0</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee6</artifactId>
 	<packaging>eclipse-plugin</packaging>
