--- a/JEE6/org.jeegen.jee6.dbauth/src/org/jeegen/jee6/dbauth/version.properties
+++ b/JEE6/org.jeegen.jee6.dbauth/src/org/jeegen/jee6/dbauth/version.properties
@@ -1,6 +1,6 @@
 #Automatically extended
 #Tue Jun 18 09:50:52 CEST 2013
-vendor=itemis AG
+vendor=JEE-Generator
 version.major=0
 version.minor=0
 version.patch=2
